--- a/Shared/Components/Entity/Tabs/ConsoleTab/ConsoleIn.razor
+++ b/Shared/Components/Entity/Tabs/ConsoleTab/ConsoleIn.razor
@@ -1,5 +1,6 @@
 ﻿@using ForkFrontend.Logic.Services.Connections
 @using ForkCommon.Model.Entity.Pocos
+@using ForkFrontend.Logic.Services.Managers
 @inject IEntityConnectionService _entityConnection
 
 <EditForm Model="@InputForm" OnSubmit="OnSubmit">
@@ -15,15 +16,15 @@
 @code {
 
     [CascadingParameter]
-    public IEntity Entity { get; set; }
+    public EntityStateManager? EntityState { get; set; }
 
     private ConsoleInput InputForm { get; set; } = new();
 
     private string Prefix => InputForm.SayMode ? "/say " : "/";
 
     private async Task OnSubmit()
-    {
-        if (await _entityConnection.SubmitConsoleInAsync($"{Prefix}{InputForm.Input}", Entity.Id))
+    {   
+        if (await _entityConnection.SubmitConsoleInAsync($"{Prefix}{InputForm.Input}", EntityState!.Entity.Id))
         {
             InputForm.Input = "";
         }
