--- a/Shared/Components/Entity/Entity.razor
+++ b/Shared/Components/Entity/Entity.razor
@@ -1,5 +1,9 @@
 ﻿@using ForkFrontend.Logic.Services.Connections
 @using ForkCommon.Model.Entity.Pocos
+@using ForkCommon.Model.Entity.Enums
+@using ForkCommon.Model.Notifications.EntityNotifications
+@using ForkFrontend.Logic.Services.Managers
+@using ForkFrontend.Logic.Services.Notifications
 @inject ILogger<Entity> _logger
 @inject IEntityConnectionService _entityConnection
 
@@ -19,11 +23,11 @@
                 @* Entity Overview *@
                 <div class="flex-1 max-w-3xl p-2 bg-forkBlue flex justify-between items-center">
                     <div class="flex gap-2 p-1">
-                        <IconButton Size="25" IconSize="11" IconChar="'s'" HoverColor="status-green" OnClickMethod="StartServer"></IconButton>
-                        <IconButton Size="25" IconSize="9" IconChar="'h'" HoverColor="status-red" OnClickMethod="StopServer"></IconButton>
-                        <IconButton Size="25" IconSize="13" IconChar="'r'" HoverColor="status-orange" OnClickMethod="RestartServer"></IconButton>
+                        <IconButton @ref="_startButton" IsDisabled="Value?.Entity.Status != EntityStatus.Stopped" Size="25" IconSize="11" IconChar="'s'" HoverColor="status-green" OnClickMethod="StartServer"></IconButton>
+                        <IconButton @ref="_stopButton" IsDisabled="Value?.Entity.Status != EntityStatus.Started" Size="25" IconSize="9" IconChar="'h'" HoverColor="status-red" OnClickMethod="StopServer"></IconButton>
+                        <IconButton @ref="_restartButton" IsDisabled="Value?.Entity.Status != EntityStatus.Started" Size="25" IconSize="13" IconChar="'r'" HoverColor="status-orange" OnClickMethod="RestartServer"></IconButton>
                     </div>
-                    <span class="font-bold text-md text-label whitespace-nowrap">@Value?.Name</span>
+                    <span class="font-bold text-md text-label whitespace-nowrap">@Value?.Entity.Name</span>
                     <IconButton Size="30" NoBackground="true" IconChar="'D'" IconSize="19" HoverColor="status-red"></IconButton>
                 </div>
             </div>
@@ -35,7 +39,7 @@
         </div>
 
         @* Player list *@
-        @if (SelectedEntityTabType == typeof(ConsoleTab) && Value is Server)
+        @if (SelectedEntityTabType == typeof(ConsoleTab) && Value?.Entity is Server)
         {
             <div class="w-60">
                 @* Top Bar *@
@@ -63,10 +67,19 @@
 
     [Parameter]
     [EditorRequired]
-    public IEntity? Value { get; set; }
+    public EntityStateManager? Value { get; set; }
 
     private Type? SelectedEntityTabType { get; set; }
     private Type? SelectedPlayerListTabType { get; set; }
+
+    private IconButton? _startButton;
+    private IconButton? _stopButton;
+    private IconButton? _restartButton;
+
+    protected override void OnInitialized()
+    {
+        Value!.EntityStatusChangedNotificationHandler.After += HandleEntityStatusChange;
+    }
 
     private void EntityTabSelected(IconTab tab)
     {
@@ -82,11 +95,11 @@
     {
         try
         {
-            await _entityConnection.StartEntityAsync(Value!.Id);
+            await _entityConnection.StartEntityAsync(Value!.Entity.Id);
         }
         catch (Exception e)
         {
-            _logger.LogError(e, $"Error while starting server {Value?.Name}");
+            _logger.LogError(e, $"Error while starting server {Value?.Entity.Name}");
         }
     }
 
@@ -94,11 +107,11 @@
     {
         try
         {
-            await _entityConnection.StopEntityAsync(Value!.Id);
+            await _entityConnection.StopEntityAsync(Value!.Entity.Id);
         }
         catch (Exception e)
         {
-            _logger.LogError(e, $"Error while stopping server {Value?.Name}");
+            _logger.LogError(e, $"Error while stopping server {Value?.Entity.Name}");
         }
     }
 
@@ -106,12 +119,31 @@
     {
         try
         {
-            await _entityConnection.RestartEntityAsync(Value!.Id);
+            await _entityConnection.RestartEntityAsync(Value!.Entity.Id);
         }
         catch (Exception e)
         {
-            _logger.LogError(e, $"Error while restarting server {Value?.Name}");
+            _logger.LogError(e, $"Error while restarting server {Value?.Entity.Name}");
         }
     }
 
+    private Task HandleEntityStatusChange(EntityStatusChangedNotification notification)
+    {
+        if(_startButton != null)
+        {
+            _startButton.IsDisabled = notification.NewEntityStatus != EntityStatus.Stopped;
+            _startButton.StateHasChanged();
+        }
+        if (_stopButton != null)
+        {
+            _stopButton.IsDisabled = notification.NewEntityStatus != EntityStatus.Started;
+            _stopButton.StateHasChanged();
+        }
+        if (_restartButton != null)
+        {
+            _restartButton.IsDisabled = notification.NewEntityStatus != EntityStatus.Started;
+            _restartButton.StateHasChanged();
+        }
+        return Task.CompletedTask;
+    }
 }
