--- a/Shared/Components/Entity/Tabs/Playerlist/Banlist.razor
+++ b/Shared/Components/Entity/Tabs/Playerlist/Banlist.razor
@@ -3,8 +3,8 @@
 @using ForkCommon.Model.Entity.Pocos.Player
 @using ForkCommon.Model.Notifications.EntityNotifications.PlayerNotifications
 @using ForkCommon.Model.Entity.Enums.Player
+@using ForkFrontend.Logic.Services.Managers
 @implements ISimplePlayerlist
-@inject INotificationService _notificationService
 <div class="h-full bg-forkBlue pt-3">
     @* Ban count *@
     <span class="px-7 py-3 text-label-hover">@(Server?.Banlist?.Count ?? 0) - Banned</span>
@@ -26,9 +26,9 @@
 @code {
 
     [CascadingParameter]
-    public IEntity? Entity { get; set; }
+    public EntityStateManager? EntityState { get; set; }
 
-    private Server? Server => Entity as Server;
+    private Server? Server => EntityState?.Entity as Server;
 
     public Player? ActivePlayer { get; set; }
 
@@ -40,37 +40,7 @@
 
     protected override void OnInitialized()
     {
-        _notificationService.Register<UpdateBanlistPlayerNotification>(HandlePlayerUpdate);
-    }
-
-    private async Task HandlePlayerUpdate(UpdateBanlistPlayerNotification notification)
-    {
-        if (Server == null || notification.EntityId != Server.Id)
-            return;
-        Server.Banlist ??= new List<Player>();
-
-        if (notification.UpdateType == PlayerlistUpdateType.Remove)
-        {
-            Server.Banlist.RemoveAll(p => p.Uid == notification.Player.Uid);
-        }
-        else
-        {
-            var existing = Server.Banlist.FirstOrDefault(p => p.Uid == notification.Player.Uid);
-    // Update
-            if (existing != null)
-            {
-                existing.Head = notification.Player.Head;
-                existing.Name = notification.Player.Name;
-                existing.LastUpdated = notification.Player.LastUpdated;
-                existing.IsOfflinePlayer = notification.Player.IsOfflinePlayer;
-            }
-    // Add
-            else
-            {
-                Server.Banlist.Add(notification.Player);
-            }
-        }
-        StateHasChanged();
+        EntityState!.UpdateBanlistPlayerNotificationHandler.After += async _ => StateHasChanged();
     }
 
 }
