--- a/Shared/Components/Inputs/Textfield.razor
+++ b/Shared/Components/Inputs/Textfield.razor
@@ -1,4 +1,6 @@
-﻿@using System.Diagnostics.CodeAnalysis
+﻿@*TODO CKE Replace this with ForkText Component*@
+
+@using System.Diagnostics.CodeAnalysis
 @inherits InputBase<string>
 <label class="@CssClass">
     @if (DisplayName != null)
