--- a/Shared/Components/Screens/CreateEntity/CreateEntityScreen.razor
+++ b/Shared/Components/Screens/CreateEntity/CreateEntityScreen.razor
@@ -1,27 +1,146 @@
-﻿@inherits AbstractScreenComponent
+﻿@using ForkCommon.Model.Entity.Pocos
+@using ForkCommon.Model.Entity.Pocos.ServerSettings
+@using ForkCommon.Model.Entity.Enums
+@using ForkFrontend.Model
+@using ForkFrontend.Model.Forms
+@inherits AbstractScreenComponent
+
+@inject ILogger<CreateEntityScreen> _logger
 
 <div class="flex flex-col h-full">
     @* Top Bar *@
     <div style="height: 50px" class="mb-5"></div>
-    
+
     @* Main *@
-    <div class="flex-1 bg-forkBlue max-w-5xl p-4">
-        <span class="text-lg font-bold text-label">Create A Server</span>
-        <div class="p-4">
-            <span class="text-label">Server Type</span>
-            <div></div>
+    <EditForm Model="Server">
+        <div class="flex-1 bg-forkBlue max-w-5xl p-4">
+            <span class="text-lg font-bold text-label">Create A Server</span>
+            <div class="px-4 pb-10">
+                <div>
+                    <ForkRadio Name="ServerType" @bind-Value="SelectedVersionType" TModelValue="VersionType"
+                               Values="AvailableVersionTypes" RadioType="RadioType.ButtonRow" Label="Server Type"></ForkRadio>
+                </div>
+
+                <div>
+                    <ForkSelect Name="ServerVersion" @bind-Value="Server.Version" TModelValue="ServerVersion"
+                        Values="Versions" Label="Choose Version"></ForkSelect>
+                        
+                </div>
+            </div>
+
+            <span class="text-lg font-bold text-label">Configure Basic Settings</span>
+            <div class="px-4 pb-10">
+                <div class="flex gap-8">
+                    <ForkText Name="ServerName" @bind-Value="Server.Name" Label="Server Name"></ForkText>
+                    <ForkText Name="ServerName" @bind-Value="Server.VanillaSettings.LevelName" Label="World Name"></ForkText>
+                </div>
+                <div class="flex gap-8">
+                    <ForkSelect Name="Gamemode" @bind-Value="Server.VanillaSettings.CurrGamemode" TModelValue="Gamemode"
+                                Values="GetAvailableGamemodes()" Label="Gamemode"></ForkSelect>
+                    <ForkSelect Name="Gamemode" @bind-Value="Server.VanillaSettings.CurrDifficulty" TModelValue="Difficulty"
+                                Values="GetAvailableDifficulties()" Label="Difficulty"></ForkSelect>
+                </div>
+            </div>
             
-            <span class="text-label">Choose Version & Build</span>
-            <div></div>
+            <IconButton IconChar="'C'" IconSize="24" Size="45" OnClickMethod="OnCreateEntity"></IconButton>
         </div>
-        
-        <span class="text-lg font-bold text-label">Configure Basic Settings</span>
-        <div class="p-4">
-            
-        </div>
-    </div>
+    </EditForm>
 </div>
 
 @code {
-    
+    private Server Server = new ("Server", new ServerVersion(), new VanillaSettings("world"), new JavaSettings());
+
+    private List<ForkFormEntity<ServerVersion, string>> Versions { get; set; } = new();
+    private VersionType _selectedVersionType = VersionType.Vanilla;
+    private VersionType SelectedVersionType
+    {
+        get => _selectedVersionType;
+        set
+        {
+            _selectedVersionType = value;
+            Versions = GetAvailableVersions(value);
+            Server.Version = Versions.FirstOrDefault()?.ModelValue;
+        }
+    }
+
+    private List<ForkFormEntity<VersionType, string>> AvailableVersionTypes => GetAvailableVersionTypes();
+
+    protected override async Task OnInitializedAsync()
+    {
+        await base.OnInitializedAsync();
+        Versions = GetAvailableVersions(_selectedVersionType);
+        Server.Version = Versions.FirstOrDefault()?.ModelValue;
+    }
+
+    private Task OnCreateEntity(IconButton _)
+    {
+        _logger.LogError(Server.Name.ToString());
+        return Task.CompletedTask;
+    }
+
+    // TODO CKE make "Values" allow async enumerables properly
+    private List<ForkFormEntity<ServerVersion, string>> GetAvailableVersions(VersionType versionType)
+    {
+        //TODO CKE implement
+        var result = new List<ForkFormEntity<ServerVersion, string>>();
+        var version1 = new ServerVersion()
+            {
+                Id = 0,
+                Type = VersionType.Vanilla,
+                Version = "1.10.2"
+            };
+        result.Add(new ForkFormEntity<ServerVersion, string>()
+            {
+                ModelValue = version1,
+                ViewValue = version1.Version
+            });
+        var version2 = new ServerVersion()
+            {
+                Id = 0,
+                Type = VersionType.Vanilla,
+                Version = "1.10.1"
+            };
+        result.Add(new ForkFormEntity<ServerVersion, string>()
+            {
+                ModelValue = version2,
+                ViewValue = version2.Version
+            });
+        return result;
+    }
+
+    private List<ForkFormEntity<VersionType, string>> GetAvailableVersionTypes()
+    {
+        var result = new List<ForkFormEntity<VersionType, string>>();
+        result.Add(new ForkFormEntity<VersionType, string>()
+            {
+                ModelValue = VersionType.Vanilla,
+                ViewValue = "Vanilla"
+            });
+        result.Add(new ForkFormEntity<VersionType, string>()
+            {
+                ModelValue = VersionType.Paper,
+                ViewValue = "Paper"
+            });
+        return result;
+    }
+
+    private List<ForkFormEntity<Gamemode, string>> GetAvailableGamemodes()
+    {
+        var result = new List<ForkFormEntity<Gamemode, string>>();
+        foreach (var gamemode in Server.VanillaSettings.Gamemodes)
+        {
+            result.Add(new ForkFormEntity<Gamemode, string>() { ModelValue = gamemode, ViewValue = gamemode.ToString() });
+        }
+        return result;
+    }
+
+    private List<ForkFormEntity<Difficulty, string>> GetAvailableDifficulties()
+    {
+        var result = new List<ForkFormEntity<Difficulty, string>>();
+        foreach (var difficulty in Server.VanillaSettings.Difficulties)
+        {
+            result.Add(new ForkFormEntity<Difficulty, string>() { ModelValue = difficulty, ViewValue = difficulty.ToString() });
+        }
+        return result;
+    }
 }
