--- a/_Imports.razor
+++ b/_Imports.razor
@@ -14,6 +14,10 @@
 @using ForkFrontend.Shared.Components.Entity.Tabs
 @using ForkFrontend.Shared.Components.Entity.Tabs.ConsoleTab
 @using ForkFrontend.Shared.Components.Entity.Tabs.ConsoleTab.Playerlist
+@using ForkFrontend.Shared.Components.Forms
+@using ForkFrontend.Shared.Components.Forms.Radio
+@using ForkFrontend.Shared.Components.Forms.Select
+@using ForkFrontend.Shared.Components.Forms.Text
 @using ForkFrontend.Shared.Components.Shared
 @using ForkFrontend.Shared.Components.Buttons
 @using ForkFrontend.Shared.Components.Sidebar
